//指定版本
//注意proto3与proto2的写法有些不同
syntax = "proto3";
//包名，通过protoc生成时go文件时
package hello;

message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string reply = 1;
}

service HelloService {
	rpc SayHello(HelloRequest) returns(HelloResponse){}
	rpc SayHello2(HelloRequest) returns(HelloResponse){}
}